# tier-zero

./: .env.example  .gitignore  LICENSE  README.md  architecture.md  pyproject.toml  render.yaml
.github/workflows/: ci.yml  eval.yml
apps/api/: blocklist.json  graph.py  main.py
apps/api/agents/: claims.py  critic.py  depth.py  forensics.py  senior_reviewer.py
apps/api/tests/: test_claims.py  test_depth.py  test_forensics.py  test_github_client.py  test_graph.py  test_main.py  test_senior_reviewer.py
apps/api/tools/: github_client.py  llm.py
apps/web/: auth.ts  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/about/: page.tsx
apps/web/app/privacy/: page.tsx
apps/web/app/report/[id]/: page.tsx
apps/web/app/terms/: page.tsx
apps/web/lib/: api.ts  tier-styles.ts
apps/web/public/: humans.txt
apps/web/types/: next-auth.d.ts
docs/: agents.md  api.md  evals.md
evals/: run_evals.py
evals/ground_truth/: profiles.json
evals/results/: 20260520_194832.json  20260521_094155.json  20260521_100723.json  20260521_104228.json
